--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -4,8 +4,8 @@
 .st-default-search-input {
     display: block !important;
     width: 100% !important;
-    font-size: 0.875rem !important;
-    padding: 0.75rem !important;
+    font-size: 1rem !important;
+    padding: 1rem !important;
     padding-left: 2.5rem !important;
     border-radius: 0.25rem !important;
     border-color: map-get($gray, 400) !important;
@@ -18,11 +18,15 @@
 
     @include transition;
 
-    &:focus:not(.registry) {
-        border-color: map-get($blue, 600) !important;
+    &.docs {
+        border-color: map-get($blue, 300) !important;
+        &:focus {
+            border-color: map-get($blue, 600) !important;
+        }
     }
 
     &.registry {
+        border-color: map-get($violet, 300) !important;
         &:focus {
             border-color: map-get($violet, 600) !important;
         }
@@ -64,6 +68,12 @@
     @screen lg {
         top: 80px !important;
     }
+
+    .st-query-present, .st-query-not-present {
+        span.st-ui-type-heading {
+            color: $brand-blue !important;
+        }
+    }
 }
 
 .search-header {
@@ -77,14 +87,14 @@
         @apply mx-auto justify-start;
     }
 
-    .docs-search-container {
+    .search-container {
         @apply flex-grow;
 
         @screen md {
             @apply flex-grow-0 justify-start;
         }
 
-        .docs-search-widget {
+        .search-widget {
             @apply w-full px-4;
 
             @screen md {
